# OpenGraphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
OpenEngine/: CMakeLists.txt
OpenEngine/shaders/: BlinnPhongFunctions.glsl  Defines.glsl  DisneyBeckmannFunctions.glsl  DisneyEpicGamesFunctions.glsl  GoogleFilamentFunctions.glsl  Lighting.glsl  PBRFunctions.glsl  Transform.glsl
OpenEngine/src/: OpenEngine.h  ogpch.h
OpenEngine/src/OpenEngine/Asset/: TextureImporter.cpp  TextureImporter.h
OpenEngine/src/OpenEngine/Core/: Application.cpp  Application.h  Assertions.h  Base.h  Build.h  Defines.h  EntryPoint.h  Includes.h  Logger.cpp  Logger.h  Memory.h  Memory.inl
OpenEngine/src/OpenEngine/Elements/: EditorCamera.cpp  EditorCamera.h  Image.h  Material.cpp  Material.h  Material.inl  MaterialManager.cpp  MaterialManager.h  Model.cpp  Model.h  PointGizmo.cpp  PointGizmo.h  SceneCamera.cpp  SceneCamera.h  VectorGizmo.cpp  VectorGizmo.h
OpenEngine/src/OpenEngine/Math/: Color.h  Color32.h  Mathf.h  Mathf.inl  Matrix4x4.h  Matrix4x4.inl  Random.h  Random.inl  Vector2D.h  Vector2D.inl  Vector3D.h  Vector3D.inl  Vector4D.h  Vector4D.inl
OpenEngine/src/OpenEngine/Render/: Buffer.cpp  Buffer.h  Common.h  Context.cpp  Context.h  Framebuffer.cpp  Framebuffer.h  Pipeline.cpp  Pipeline.h  PipelineState.h  PrimitiveTopology.h  RenderCamera.cpp  RenderCamera.h  RenderCommand.cpp  RenderCommand.h  RenderEntity.cpp  RenderEntity.h  RenderStructs.h  RenderSystem.cpp  RenderSystem.h  RenderWorkflow.cpp  RenderWorkflow.h  RenderingData.cpp  RenderingData.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  SkyboxVertices.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
OpenEngine/src/OpenEngine/Scene/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  LightComponent.cpp  LightComponent.h  ModelRenderComponent.cpp  ModelRenderComponent.h  RenderComponent.cpp  RenderComponent.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
OpenEngine/src/OpenEngine/Windowing/: Window.cpp  Window.h  WindowSystem.cpp  WindowSystem.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: BlinnPhong.frag  DisneyBeckmannPBR.frag  DisneyBeckmannPBR.vert  DisneyEpicPBR.frag  GoogleFilamentPBR.frag  ModelShader.frag  ModelShader.vert  PointGizmo.frag  PointGizmo.vert  Skybox.vert  TriangleShader.frag  TriangleShader.vert  VectorGizmo.frag  VectorGizmo.vert
Sandbox/src/: SandboxApp.cpp
